--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   flutter_mobx: ^2.0.0-nullsafety.3
   mobx_codegen: ^2.0.1+3
   mobx: ^2.0.1
-  
+  floor: ^1.2.0
+  firebase_auth: ^3.3.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
